@@ -1,3 +1,8 @@
+2004-02-16  Glenn Golden  <gdg@zplane.com>
+
+	* statistics/distributions/discrete_inv.m:
+	Reduce memory requirements.
+
 2004-02-16  John W. Eaton  <jwe@bevo.che.wisc.edu>
 
 	* plot/__errcomm__.m: Fix thinko in previous change.
